using `glibc' in the "product" field.

Version 2.34.1

The following bugs are resolved with this release:

  [12889] nptl: Fix race between pthread_kill and thread exit
  [19193] nptl: pthread_kill, pthread_cancel should not fail after exit
  [28036] Incorrect types for pthread_mutexattr_set/getrobust_np
  [28182] _TIME_BITS=64 in C++ has issues with fcntl, ioctl, prctl
  [28310] Do not use affinity mask for sysconf (_SC_NPROCESSORS_CONF)
  [28340] ld.so crashes while loading a DSO with a read-only dynamic section
  [28357] deadlock between pthread_create and ELF constructors
  [28361] nptl: Avoid setxid deadlock with blocked signals in thread exit
  [28407] pthread_kill assumes that kill and tgkill are equivalent
  [28524] Conversion from ISO-2022-JP-3 with iconv may emit spurious NULs
  [28607] Masked signals are delivered on thread exit
  [28532] powerpc64[le]: CFI for assembly templated syscalls is incorrect
  [28678] nptl/tst-create1 hangs sporadically


Version 2.34

Major new features:

* In order to support smoother in-place-upgrades and to simplify
  the implementation of the runtime all functionality formerly
  implemented in the libraries libpthread, libdl, libutil, libanl has
  been integrated into libc.  New applications do not need to link with
  -lpthread, -ldl, -lutil, -lanl anymore.  For backwards compatibility,
  empty static archives libpthread.a, libdl.a, libutil.a, libanl.a are
  provided, so that the linker options keep working.  Applications which
  have been linked against glibc 2.33 or earlier continue to load the
  corresponding shared objects (which are now empty).  The integration
  of those libraries into libc means that additional symbols become
  available by default.  This can cause applications that contain weak
  references to take unexpected code paths that would only have been
  used in previous glibc versions when e.g. preloading libpthread.so.0,
  potentially exposing application bugs.
